<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/darkgreen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="78dp"
        android:layout_height="65dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="328dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="540dp"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>

    <EditText
        android:id="@+id/editText"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:hint="@string/pas"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/appCompatButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/green"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.146"></Button>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764"></TextView>

    <Button
        android:id="@+id/appCompatButton3"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/green"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"></Button>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="251dp"
        android:src="@drawable/listya"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>